--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^3.0.0",
     "jquery": "^3.6.0",
-    "sass": "^1.52.2"
+    "sass": "^1.52.2",
+    "slick-carousel": "^1.8.1"
   }
 }
